Fixes login modal spacing (#6937)
* fix login modal spacing

* fix icon centring and decrease space under social media buttons

* reorganise selectors and revert visibility line height

* rearrange visibility selectors again

--- a/app/assets/stylesheets/login_modal.scss
+++ b/app/assets/stylesheets/login_modal.scss
@@ -1,19 +1,24 @@
 #socialIcons {
   display: flex;
   justify-content: center;
+  margin-bottom: -2.8rem;
 }
 
 .login-form {
   padding: 0 30px;
 
-  a#visibility{
+  #visibility {
     line-height: 0;
+    color: #888;
+    pointer-events: auto;
+    text-decoration: none;
   }
-}
 
-#visibility {
-  color:#888;
-  pointer-events: auto;
-  line-height: 2.2em;
-  text-decoration: none;
+  div.form-group {
+    margin-top: 1rem;
+  }
+
+  p.form-grey {
+    margin-top: 1rem;
+  }
 }
